[package]
name = "downify"
version = "0.2.1"
authors = ["TimTom <timtom.business@gmail.com>"]
edition = "2018"
description = "Downify is a small Rust library for downloading, signing, and verifying files."
documentation = "https://github.com/timtom-dev/downify"
homepage = "https://github.com/timtom-dev/downify"
repository = "https://github.com/timtom-dev/downify"
readme = "README.md"
keywords = ["cryptography"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking"] }
sodiumoxide = "0.2"
blake2-rfc = "0.2"
base64 = "0.9"
# TODO - dependencies for binary, waiting on https://github.com/rust-lang/cargo/issues/1982
structopt = "0.2"
url = "1.7"
